Modifs mutation + facteurs de régulation